Implemented the ClientController Created some of the DTOs (ClientModel) that will be used by the Client for storing messages by the server. Small fixes on model classes. Transformed all the errors in TODOs or FIXMEs.